Fixed unwanted horizontal scroll due to oversized footer right margin

--- a/js/_foot.scss
+++ b/js/_foot.scss
@@ -1,5 +1,5 @@
 footer {
-  margin-right: -$textMargin;
+//  margin-right: -$textMargin;
   margin-left: -$textMargin;
   line-height: 1em;
   iframe {
